# wasm-load-basecamp

./: Cargo.toml  README.md  guest.wasm
guest/: Cargo.toml
guest/src/: lib.rs
src/: bindings.rs  lib.rs  main.rs
wasm/greet/: Cargo.toml
wasm/greet/src/: bindings.rs
wasm/hello-wasi-cli/: Cargo.toml
wasm/hello-wasi-cli/src/: bindings.rs  main.rs
wit/: host.wit
