[package]
name = "guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.24"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:guest"

[package.metadata.component.dependencies]
